Fri Jan 18 14:03:01 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * snmp-ups: backported from the trunk.
   - mgemib.h: add support for MGE* Environment Sensor (ref 66 846).
     This adds the data ambient.temperature and ambient.humidity.
   - snmp-ups.c: fix the handling of multiplier on ambient.temperature
     for units other than APC. Bump driver release to 0.421 since
     there are still differences with the trunk version.

2.2.1

Fri Dec 21 10:59:01 UTC 2007 / Arnaud Quette <arnaudquette@eaton.com>

 - Bump the release version to 2.2.1

2.2.1-pre2

Mon Dec 17 15:15:17 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - NEWS: more completion for the upcoming 2.2.1 release.

Sun Dec 16 20:19:36 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - Changed the default installation directory for pkg-config files,
   following a suggestion of Stanislav Brabec. The new default
   location is ${libdir}/pkgconfig. This is still configurable via
   the --with-pkgconfig-dir=PATH option and can be turned off with
   --without-pkgconfig-dir.

Sun Dec 16 20:10:41 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - conf/upssched.conf.sample: Insert STATEPATH into default PIPEFN
   and LOCKFN.

Sun Dec 16 19:53:51 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - conf/upsstats-single.html.sample, conf/upsstats.html.sample:
   The snmp driver reports 3-phase variables which APC's claims to
   support but returns junk for. Doing IFSUPP against the L2
   variables rather than the L1 ones. [George Ross]

Sun Dec 16 19:43:41 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - configure.in, m4/ax_create_stdint_h.m4: Added the AX_CREATE_STDINT_H
   macro to create our own header file with fixed width types.
 - <various>: Use above mentioned header file, instead of <stdint.h>.

Sun Dec 16 16:15:56 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/upshandler.h,dstate.h,dstate-hal.h: The return values for