@@ -3,6 +3,7 @@
 if WITH_LIB
 if WITH_PKG_CONFIG
  pkgconfig_DATA = libupsclient.pc
+else
+ bin_SCRIPTS = libupsclient-config
 endif
-bin_SCRIPTS = libupsclient-config
 endif
