@@ -1,0 +1,35 @@
+.TH LIBUPSCLIENT-CONFIG 1 "Januaryr 26, 2008"
+.SH NAME
+libupsclient-config - script to get information about the installed version of libupsclient
+.SH SYNOPSIS
+.B  libupsclient-config [\-\-version] [\-\-libs] [\-\-cflags]
+.SH DESCRIPTION
+.PP
+\fIlibupsclient-config\fP is a tool that is used to configure to determine
+the compiler and linker flags that should be used to compile
+and link programs that use \fIlibupsclient\fP from the Network UPS Tools project. 
+.
+.SH OPTIONS
+.l
+\fIlibupsclient-config\fP accepts the following options:
+.TP 8
+.B  LIBRARIES
+This argument is currently ignored as libusb as only one library.
+.TP 8
+.B  \-\-version
+Print the currently installed version of \fIlibusb\fP on the standard output.
+.TP 8
+.B  \-\-libs
+Print the linker flags that are necessary to link a \fIlibusb\fP program.
+.TP 8
+.B  \-\-cflags
+Print the compiler flags that are necessary to compile a \fIlibusb\fP program.
+
+.SH AUTHORS
+This manual page was written by Arnaud Quette <aquette.dev@gmail.com>.
+
+.SH SEE ALSO
+
+.SS Internet resources:
+The NUT (Network UPS Tools) home page: http://www.networkupstools.org/
+
